# BNU-COM5042

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  all_code.py  database.json  main.py  pyproject.toml  requirements-dev.txt  users.py
.github/workflows/: .ci.yml  .pipeline.yml  pipeline.yml
database/: database.py
pipeline/: build.sh  deploy.dev.sh  deploy.prod.sh
schemas/: user.py
smart_home_app/: all_code.py  main.py  users.py
smart_home_app/database/: database.py
smart_home_app/schemas/: user.py
test/: pytest.ini  test_auth.py  test_main.py  test_menu.py  test_options.py
